--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="/mihome/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/mihome/images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/mihome/images/favicon-16x16.png">
-	<link rel="manifest" href="../site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="images/site.webmanifest">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"
 		async></script>
 	<link
